<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TestControlBoradActivity!</string>
    <string name="app_name">TestControlBorad</string>
    <string name="button">button</string>
    <string name="textView"></string>
    <string name="remote_service_connected">S_C</string>
    <string name="remote_service_disconnected">S_DC</string>
    <string name="button_start_service">START SERVICE</string>
    <string name="button_finish_service">FINISH SERVICE</string>
    <string name="button_bind_service">BIND SERVICE</string>
    <string name="button_unbind_service">NOBIND SERVICE</string>
    <string name="button_open_alarm">开灯</string>
    <string name="button_close_alarm">关灯</string>
    <string name="alarm_status" />

</resources>