<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:text="@string/textView" />

    <Button
        android:id="@+id/button_start_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start_service" />

    <Button
        android:id="@+id/button_end_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_finish_service" />

    <Button
        android:id="@+id/button_bind_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_bind_service" />

    <Button
        android:id="@+id/button_unbind_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_unbind_service" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Button
        android:id="@+id/open_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_open_alarm" />

</LinearLayout>